feat/artist: add getall artists endpoint
